Update banner image source in index.html

--- a/my-project/index.html
+++ b/my-project/index.html
@@ -881,7 +881,7 @@
           <div class="banner-right">
             <img
               class="banner-image"
-              src="IMG_3068-rajattu.JPG"
+              src="IMG_3859.JPG"
               alt="brutal"
             />
             <span class="github-circle">
