Update banner image source in index.html

--- a/my-project/index.html
+++ b/my-project/index.html
@@ -856,7 +856,7 @@
         <div class="banner-content">
           <div class="banner-left">
             <h1>Hei!</h1>
-            <img class="banner-left-image" src="IMG_3068-rajattu.JPG" alt="Onni Fischer">
+            <img class="banner-left-image" src="IMG_3859.JPG" alt="Onni Fischer">
             </img>
             <div class="github-left-circle">
               <div class="github-logo">
