Update responsive layout margins

--- a/my-project/cv.html
+++ b/my-project/cv.html
@@ -42,6 +42,13 @@
         }
       }
 
+      @media screen and (max-width: 1600px) {
+        :root {
+          --left-margin: 15rem;
+          --right-margin: 15rem;
+        }
+      }
+
       @media screen and (min-width: 2100px) {
         :root {
           --left-margin: 35rem;
