Update responsive layout margins

--- a/my-project/cv.html
+++ b/my-project/cv.html
@@ -19,10 +19,10 @@
         --top-padding: 4rem;
         --bottom-padding: 4rem;
         /*teksti*/
-        --big-title: 5rem;
-        --title: 1.5rem;
-        --big-text: 2.5rem;
-        --text: 1.2rem;
+        --big-title: 2rem;
+        --title: 1.3rem;
+        --big-text: 1.2rem;
+        --text: 1rem;
         /*tekstimarginaalit*/
         --big-title-margin: 1rem 0 1rem;
       }
@@ -1024,202 +1024,205 @@
     </style>
   </head>
   <body>
-    <div class="container">
-      <div class="banner">
-        <div class="banner-content">
-          <div class="header">
-            <div class="header-left">
-              <img class="banner-image" src="IMG_3859.JPG" alt="brutal" />
-            </div>
-            <div class="header-right">
-              <div class="title">
-                <div class="header-text">
-                  <h1>Onni Fischer</h1>
-                  <p>
-                    Olen 21-vuotias insinööriopiskelija Espoosta, opiskelen
-                    Metropoliassa Tieto- ja viestintätekniikkaa pääaineena
-                    Web-tekniikat ja digitaalinen media. Olen kiinnostunut
-                    erityisesti frontend-kehityksestä ja käyttöliittymien
-                    suunnittelusta. Viimeisin innostava ja mielenkiintoinen
-                    projekti on ollut tekoälyä hyödyntävän
-                    <a href="https://www.webweave.fi"
-                      ><span>kotisivukoneen</span></a
-                    >
-                    kehittäminen yhdessä opiskelukavereiden kanssa! 🤖
-                  </p>
+    <page size="A4">
+      <div class="container">
+        <div class="banner">
+          <div class="banner-content">
+            <div class="header">
+              <div class="header-left">
+                <img class="banner-image" src="IMG_3859.JPG" alt="brutal" />
+              </div>
+              <div class="header-right">
+                <div class="title">
+                  <div class="header-text">
+                    <h1>Onni Fischer</h1>
+                    <p>
+                      Olen 21-vuotias insinööriopiskelija Espoosta, opiskelen
+                      Metropoliassa Tieto- ja viestintätekniikkaa pääaineena
+                      Web-tekniikat ja digitaalinen media. Olen kiinnostunut
+                      erityisesti frontend-kehityksestä ja käyttöliittymien
+                      suunnittelusta. Viimeisin innostava ja mielenkiintoinen
+                      projekti on ollut tekoälyä hyödyntävän
+                      <a href="https://www.webweave.fi"
+                        ><span>kotisivukoneen</span></a
+                      >
+                      kehittäminen yhdessä opiskelukavereiden kanssa! 🤖
+                    </p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
 
-      <div class="content">
-        <div class="info">
-          <h2>Henkilötiedot</h2>
-          <ul>
-            <li>
-              <h3>Osoite</h3>
-              <p>Luuvanpuisto 10</p>
-            </li>
-            <li>
-              <h3>Puhelin</h3>
-              <p>045 264 7313</p>
-            </li>
-            <li>
-              <h3>Sähköposti</h3>
-              <p>onni.fischer@gmail.com</p>
-            </li>
-            <li>
-              <h3>Syntymäaika</h3>
-              <p>12.12.2002</p>
-            </li>
-            <li>
-              <h3>Syntymäpaikka</h3>
-              <p>Espoo</p>
-            </li>
-            <li>
-              <h3>Kansallisuus</h3>
-              <p>suomi</p>
-            </li>
-            <li>
-              <h3>Ajokortti</h3>
-              <p>B</p>
-            </li>
-            <li>
-              <h3>Kotisivut</h3>
-              <a href="https://onni.pro">onni.pro</a>
-            </li>
-          </ul>
-          <h2>Kiinnostuksen kohteet</h2>
-          <ul>
-            <li>
-              <p>Tietokoneet ja teknologia</p>
-            </li>
-            <li>
-              <p>Musiikki</p>
-            </li>
-          </ul>
-          <h2>Kielet</h2>
-          <ul>
-            <li>
-              <p>suomi</p>
-              <div class="lang-progress">
-                <div class="lang-progress-fill fill-100"></div>
-              </div>
-            </li>
-            <li>
-              <p>englanti</p>
-              <div class="lang-progress">
-                <div class="lang-progress-fill fill-80"></div>
-              </div>
-            </li>
-            <li>
-              <p>ruotsi</p>
-              <div class="lang-progress">
-                <div class="lang-progress-fill fill-60"></div>
-              </div>
-            </li>
-          </ul>
-        </div>
-        <div class="experience">
-          <h2>Työkokemus</h2>
-          <div class="xp-box-container">
-            <div class="xp-box">
-              <h2>kesätyöntekijä</h2>
-              <p class="employer">
-                Jääkäripataljoona 27:n perinneyhdistys, Helsinki
-              </p>
-              <p class="job-desc">
-                arkiston sekä esineistön järjestäminen ja luettelointi Exceliin
-              </p>
-              <div class="job-time">
-                <span>heinä 2022 - heinä 2022</span>
-              </div>
-            </div>
-
-            <div class="xp-box">
-              <h2>harjoittelija</h2>
-              <p class="employer">Maanpuolustuskoulutusyhdistys, Helsinki</p>
-              <p class="job-desc">
-                tiedon käsittely: luominen, kokoaminen, tulostuspalvelut,
-                javaohjelmointikielellä toteutettu projekti, jossa pääpaino
-                olio‑ohjelmoinnissa ja graafisessa käyttöliittymässä
-              </p>
-              <div class="job-time">
-                <span>maalis 2020 - touko 2020</span>
-              </div>
-            </div>
-
-            <div class="xp-box">
-              <h2>kesätyöntekijä</h2>
-              <p class="employer">Sellon kirjasto, Espoo</p>
-              <p class="job-desc">
-                kirjastoaineiston järjestely, hyllytys, varatun aineiston haku,
-                asiakaspalvelu
-              </p>
-              <div class="job-time">
-                <span>kesä 2019 - heinä 2019</span>
-              </div>
-            </div>
-
-            <div class="xp-box">
-              <h2>harjoittelija</h2>
-              <p class="employer">Entressen kirjasto, Espoo</p>
-              <p class="job-desc">
-                asiakaspalvelu, opastus laitteiden käytössä, tietoteknisten
-                ongelmien ratkaiseminen sekä laitteiston huolto
-              </p>
-              <div class="job-time">
-                <span>tammi 2019 - maalis 2019</span>
-              </div>
-            </div>
-
-            <div class="xp-box">
-              <h2>kesäharjoittelija</h2>
-              <p class="employer">Prisma Sello, Espoo</p>
-              <p class="job-desc">tuotteiden hyllyttäminen, asiakaspalvelu</p>
-              <div class="job-time">
-                <span>heinä 2018 - heinä 2018</span>
-              </div>
-            </div>
-
-            <div class="xp-box">
-              <h2>harjoittelija</h2>
-              <p class="employer">Prisma Sello, Espoo</p>
-              <p class="job-desc">
-                tuotteiden myyntikunnostus ja esillevienti, myyjän avustavat
-                tehtävät
-              </p>
-              <div class="job-time">
-                <span>marras 2017 - marras 2017</span>
-              </div>
-            </div>
+        <div class="content">
+          <div class="info">
+            <h2>Henkilötiedot</h2>
+            <ul>
+              <li>
+                <h3>Osoite</h3>
+                <p>Luuvanpuisto 10</p>
+              </li>
+              <li>
+                <h3>Puhelin</h3>
+                <p>045 264 7313</p>
+              </li>
+              <li>
+                <h3>Sähköposti</h3>
+                <p>onni.fischer@gmail.com</p>
+              </li>
+              <li>
+                <h3>Syntymäaika</h3>
+                <p>12.12.2002</p>
+              </li>
+              <li>
+                <h3>Syntymäpaikka</h3>
+                <p>Espoo</p>
+              </li>
+              <li>
+                <h3>Kansallisuus</h3>
+                <p>suomi</p>
+              </li>
+              <li>
+                <h3>Ajokortti</h3>
+                <p>B</p>
+              </li>
+              <li>
+                <h3>Kotisivut</h3>
+                <a href="https://onni.pro">onni.pro</a>
+              </li>
+            </ul>
+            <h2>Kiinnostuksen kohteet</h2>
+            <ul>
+              <li>
+                <p>Tietokoneet ja teknologia</p>
+              </li>
+              <li>
+                <p>Musiikki</p>
+              </li>
+            </ul>
+            <h2>Kielet</h2>
+            <ul>
+              <li>
+                <p>suomi</p>
+                <div class="lang-progress">
+                  <div class="lang-progress-fill fill-100"></div>
+                </div>
+              </li>
+              <li>
+                <p>englanti</p>
+                <div class="lang-progress">
+                  <div class="lang-progress-fill fill-80"></div>
+                </div>
+              </li>
+              <li>
+                <p>ruotsi</p>
+                <div class="lang-progress">
+                  <div class="lang-progress-fill fill-60"></div>
+                </div>
+              </li>
+            </ul>
           </div>
-          <div class="education">
-            <h2>Koulutus</h2>
-            <div class="edu-box-container">
+          <div class="experience">
+            <h2>Työkokemus</h2>
+            <div class="xp-box-container">
               <div class="xp-box">
-                <h2>Tieto- ja viestintätekniikan tutkinto-ohjelma</h2>
-                <p class="employer">Metropolia, Espoo</p>
+                <h2>kesätyöntekijä</h2>
+                <p class="employer">
+                  Jääkäripataljoona 27:n perinneyhdistys, Helsinki
+                </p>
                 <p class="job-desc">
-                  Ammatillisena pääaineena web‑kehitys ja digitaalinen media
+                  arkiston sekä esineistön järjestäminen ja luettelointi
+                  Exceliin
                 </p>
                 <div class="job-time">
-                  <span>tammi 2021 - 2025</span>
+                  <span>heinä 2022 - heinä 2022</span>
                 </div>
               </div>
+
               <div class="xp-box">
-                <h2>Tieto- ja viestintätekniikan perustutkinto, Datanomi</h2>
-                <p class="employer">Omnia, Espoo</p>
+                <h2>harjoittelija</h2>
+                <p class="employer">Maanpuolustuskoulutusyhdistys, Helsinki</p>
+                <p class="job-desc">
+                  tiedon käsittely: luominen, kokoaminen, tulostuspalvelut,
+                  javaohjelmointikielellä toteutettu projekti, jossa pääpaino
+                  olio‑ohjelmoinnissa ja graafisessa käyttöliittymässä
+                </p>
                 <div class="job-time">
-                  <span>elo 2018 - joulu 2020</span>
+                  <span>maalis 2020 - touko 2020</span>
+                </div>
+              </div>
+
+              <div class="xp-box">
+                <h2>kesätyöntekijä</h2>
+                <p class="employer">Sellon kirjasto, Espoo</p>
+                <p class="job-desc">
+                  kirjastoaineiston järjestely, hyllytys, varatun aineiston
+                  haku, asiakaspalvelu
+                </p>
+                <div class="job-time">
+                  <span>kesä 2019 - heinä 2019</span>
+                </div>
+              </div>
+
+              <div class="xp-box">
+                <h2>harjoittelija</h2>
+                <p class="employer">Entressen kirjasto, Espoo</p>
+                <p class="job-desc">
+                  asiakaspalvelu, opastus laitteiden käytössä, tietoteknisten
+                  ongelmien ratkaiseminen sekä laitteiston huolto
+                </p>
+                <div class="job-time">
+                  <span>tammi 2019 - maalis 2019</span>
+                </div>
+              </div>
+
+              <div class="xp-box">
+                <h2>kesäharjoittelija</h2>
+                <p class="employer">Prisma Sello, Espoo</p>
+                <p class="job-desc">tuotteiden hyllyttäminen, asiakaspalvelu</p>
+                <div class="job-time">
+                  <span>heinä 2018 - heinä 2018</span>
+                </div>
+              </div>
+
+              <div class="xp-box">
+                <h2>harjoittelija</h2>
+                <p class="employer">Prisma Sello, Espoo</p>
+                <p class="job-desc">
+                  tuotteiden myyntikunnostus ja esillevienti, myyjän avustavat
+                  tehtävät
+                </p>
+                <div class="job-time">
+                  <span>marras 2017 - marras 2017</span>
+                </div>
+              </div>
+            </div>
+            <div class="education">
+              <h2>Koulutus</h2>
+              <div class="edu-box-container">
+                <div class="xp-box">
+                  <h2>Tieto- ja viestintätekniikan tutkinto-ohjelma</h2>
+                  <p class="employer">Metropolia, Espoo</p>
+                  <p class="job-desc">
+                    Ammatillisena pääaineena web‑kehitys ja digitaalinen media
+                  </p>
+                  <div class="job-time">
+                    <span>tammi 2021 - 2025</span>
+                  </div>
+                </div>
+                <div class="xp-box">
+                  <h2>Tieto- ja viestintätekniikan perustutkinto, Datanomi</h2>
+                  <p class="employer">Omnia, Espoo</p>
+                  <div class="job-time">
+                    <span>elo 2018 - joulu 2020</span>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
+    </page>
   </body>
 </html>
