Update project layout and image sources for improved presentation

--- a/my-project/index.html
+++ b/my-project/index.html
@@ -545,6 +545,7 @@
         margin-right: 1rem;
         margin-bottom: 1rem;
         box-shadow: var(--lightGreen) 5px 5px;
+        margin-top: auto;
       }
 
       .project-image-container img {
@@ -651,6 +652,7 @@
         border: 2px solid black;
         box-shadow: var(--darkGreen) 5px 5px;
         width: 100%;
+        overflow: hidden;
       }
 
       .hobby-card h2 {
@@ -873,10 +875,6 @@
               Olen Onni Fischer, insinööriopiskelija Metropoliassa, pääaineena
               web-tekniikat ja digitaalinen media. Olen kiinnostunut erityisesti
               frontend-kehityksestä ja käyttöliittymien suunnittelusta.
-              Viimeisin innostava ja mielenkiintoinen projekti on ollut tekoälyä
-              hyödyntävän
-              <a href="https://www.webweave.fi"><span>kotisivukoneen</span></a>
-              kehittäminen yhdessä opiskelukavereiden kanssa! 🤖
             </h2>
             <button>Lisätietoa</button>
           </div>
@@ -920,11 +918,11 @@
                 <span>Firebase</span>
               </div>
               <div class="project-links">
-                <a href=""></a>
+              
                 </div>
                 <div class="project-image-container">
                   <img
-                    src="https://users.metropolia.fi/~onnif/portfolioKuvat/ww.JPG"
+                    src="https://users.metropolia.fi/~onnif/portfolioKuvat/salesAI.JPG"
                     alt="project"
                   />
                 </div>
@@ -943,7 +941,7 @@
               </div>
               <div class="project-links">
 
-                <a href="https://www.webweave.fi"> <span>▶ Kokeile</span></a>
+             
               </div>
               <div class="project-image-container">
                 <img
