Update project description for clarity and context

--- a/my-project/index.html
+++ b/my-project/index.html
@@ -907,7 +907,7 @@
             <div class="project-card">
               <h2>SalesAI</h2>
               <p>
-                Tekoälyavusteinen asiakaspalvelusovellus, jossa tekoäly oppii asiakkaiden kanssa käydyistä keskusteluista ja osaa tarjota keskusteluun sopivia vastauksia.
+                Kouluprojektina asiakkaalle kehitetty tekoälyavusteinen asiakaspalvelusovellus, jossa tekoäly oppii asiakkaiden kanssa käydyistä keskusteluista ja osaa tarjota keskusteluun sopivia vastauksia.
                 Tekoälyn saadessa tarpeeksi dataa sovellus voidaan automatisoida täysin.
 
               </p>
